# tdscan

./: .editorconfig  .gitignore  Cargo.toml  README.md  build-base-ios.sh  build-viewer.sh  build-wasm.sh  package-lock.json  package.json
base/: Cargo.toml  build.rs
base/src/: defs.rs  ffi.h  ffi.rs  fm.rs  lib.rs  util.rs
base/src/fm/: data.proto  data.rs  mod.rs  reader.rs  writer.rs
base/src/proto/: model.proto
base/src/util/: cli.rs  fs.rs  glam.rs  mod.rs  test.rs
composer/: Cargo.toml  build.rs
composer/src/: animate.rs  build_view.rs  combine.rs  export_obj.rs  export_to_json.rs  export_to_obj.rs  extract_scan_images.rs  import_from_obj.rs  import_obj.rs  lib.rs  main.rs  mesh.rs  misc.rs  optimize_scan_geometry.rs  point_cloud.rs  scan.rs  select.rs  texture.rs  texturing.rs
composer/src/lua/: animate.lua
composer/src/poisson/: mod.rs  poisson.cc
composer/src/texture/: color_correction.rs  input_patching.rs  input_selection.rs  misc.rs  mod.rs  output_baking.rs  output_packing.rs  output_patching.rs  textured_mesh.rs
composer/src/texturing/: input_projection.rs  input_selection.rs  misc.rs  output_baking.rs  output_packing.rs  output_patching.rs
doc/: texturing.md
python/: build_view.py  find_batch_dot_times.py  find_build_points_cloud_average_time.py  find_build_points_cloud_times_metrics.py  find_local_plane_uniform_cost_time_metrics.py  find_multiple_projections_cost_time_metrics.py  find_multiple_projections_interp_cost_time_metrics.py  find_points_in_neighborhood_cost_time_metrics.py  genetic_algorithm.py  interpolate_point_cloud.py  main.py  objectives.py  optimize.py  points_cloud.py  show_planes.py  utils.py
scanner/: Bridging-Header.h  Cargo.toml  ffi_mock.c
scanner/Fitsme Scanner/: AppDelegate.swift  ContentView.swift  Dimmer.swift  Info.plist  ScanSession.swift  ScannerApp.swift
scanner/Fitsme Scanner.xcodeproj/: project.pbxproj
scanner/Fitsme Scanner.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
scanner/Fitsme Scanner.xcodeproj/project.xcworkspace/xcuserdata/ababo.xcuserdatad/: UserInterfaceState.xcuserstate
scanner/Fitsme Scanner.xcodeproj/xcshareddata/xcschemes/: Fitsme Scanner (Debug).xcscheme  Fitsme Scanner (Release).xcscheme  Fitsme Scanner.xcscheme
scanner/Fitsme Scanner.xcodeproj/xcuserdata/ababo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
scanner/Fitsme Scanner.xcodeproj/xcuserdata/ababo.xcuserdatad/xcschemes/: xcschememanagement.plist
scanner/ios/Fitsme Scanner/: ContentView.swift  ScannerApp.swift
scanner/ios/Fitsme Scanner.xcodeproj/: project.pbxproj
scanner/ios/Fitsme Scanner.xcodeproj/project.xcworkspace/xcuserdata/ababo.xcuserdatad/: UserInterfaceState.xcuserstate
scanner/src/: scanner.h
viewer/: Cargo.toml  index.html  index.js
viewer/src/: controller.rs  defs.rs  lib.rs  log.rs  util.rs  viewer.rs  webgl_adapter.rs
viewer/src/shader/: frag.glsl  vert.glsl
viewer/src/util/: glam.rs  mod.rs  sync.rs  wasm.rs  web.rs  webgl.rs
