[package]
name = "base"
description = "Fitsme shared code base"
version = "0.1.0"
authors = ["Simon Prykhodko <semion.ababo@gmail.com>"]
edition = "2021"

[lib]
# TODO: Specify "staticlib" for aarch64-apple-ios only when it's supported.
crate-type = ["rlib", "staticlib"]

[dependencies]
arrayvec = "0.7.0"
flate2 = "1.0"
prost = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[build-dependencies]
prost-build = { version = "0.7" }
