[package]
name = "composer"
description = "Fitsme model composer"
version = "0.1.0"
authors = ["Simon Prykhodko <semion.ababo@gmail.com>"]
edition = "2021"

[build-dependencies]
cc = "1.0"
ureq = "2.3.0"
zip = "0.5"

[dependencies]
argmin = "0.4.7"
base = { path = "../base" }
kdtree = "0.6.0"
nalgebra = "0.29.0"
rand = "0.8.4"
rlua = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
