[package]
name = "viewer"
description = "Fitsme web viewer"
version = "0.1.0"
authors = ["Simon Prykhodko <semion.ababo@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.7.0"
async-trait = "0.1.50"
base = { path = "../base" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

js-sys = "0.3.50"
memoffset = "0.6"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.24"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.50"
features = [
  'Blob',
  'Document',
  'HtmlImageElement',
  'MouseEvent',
  'Performance',
  'Url',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'Window',
]

[dev-dependencies]
async-attributes = "1.1.2"
async-std = "1.9.0"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
